fix for validation of long expressions, avoid double validation of expressions in ee:transform