@@ -16,12 +16,14 @@
         <surefire.args>
             -XX:+IgnoreUnrecognizedVMOptions
             --add-exports=org.mule.runtime.api/org.mule.runtime.internal.dsl=ALL-UNNAMED
+            --add-exports=org.mule.runtime.extension.model/org.mule.runtime.config.internal.validation.test=ALL-UNNAMED
             --add-exports=org.mule.runtime.extensions.api/org.mule.runtime.extension.internal.spi=ALL-UNNAMED
             --add-exports=org.mule.runtime.dsl.api/org.mule.runtime.dsl.internal.xml.parser=ALL-UNNAMED
             ${surefire.args.base}
         </surefire.args>
 
         <javaModuleName>org.mule.runtime.extension.model</javaModuleName>
+        <skipExportTests>false</skipExportTests>
         <formatterConfigPath>../formatter.xml</formatterConfigPath>
     </properties>
 
@@ -44,6 +46,23 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>        
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>default-test-jar</id>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                        <configuration>
+                            <includes>
+                                <include>org/mule/runtime/config/internal/validation/test/**</include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                </executions>                
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
